--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "koa": "^2.15.0",
     "koa-router": "^12.0.1",
     "koa-static": "^5.0.0",
-    "moment": "^2.30.1"
+    "moment": "^2.30.1",
+    "node-schedule": "^2.1.1"
   }
 }
